---------------------------------------------------------------------------
Version 4.5.3  [v4-beta] (rgerhards), 2009-08-??
- bugfix: strings improperly reused, resulting in some message properties
  be populated with strings from previous messages. This was caused by
  an improper predicate check. [backported from v5]
---------------------------------------------------------------------------
Version 4.5.2  [v4-beta] (rgerhards), 2009-08-21
- legacy syslog parser changed so that it now accepts date stamps in
  wrong case. Some devices seem to create them and I do not see any harm
  in supporting that.
- added $InputTCPMaxListeners directive - permits to specify how many 
  TCP servers shall be possible (default is 20).
- bugfix: memory leak with some input modules. Those inputs that
  use parseAndSubmitMsg() leak two small memory blocks with every message.
  Typically, those process only relatively few messages, so the issue 
  does most probably not have any effect in practice.
- bugfix: if tcp listen port could not be created, no error message was
  emitted
- bugfix: potential segfault in output file writer (omfile)
  In async write mode, we use modular arithmetic to index the output
  buffer array. However, the counter variables accidently were signed,
  thus resulting in negative indizes after integer overflow. That in turn
  could lead to segfaults, but was depending on the memory layout of 
  the instance in question (which in turn depended on a number of
  variables, like compile settings but also configuration). The counters
  are now unsigned (as they always should have been) and so the dangling
  mis-indexing does no longer happen. This bug potentially affected all
  installations, even if only some may actually have seen a segfault.
- bugfix: hostnames with dashes in them were incorrectly treated as
  malformed, thus causing them to be treated as TAG (this was a regression
  introduced from the "rfc3164 strict" change in 4.5.0).